--- a/css/style.css
+++ b/css/style.css
@@ -28,11 +28,36 @@ html {
   --color-dark-blue: #4D6D93;
   --color-alert: #FC4655;
   --color-orange: #FD9731;
-  --color-white: #fff; }
+  --color-white: #fff;
+  --bg: #fff;
+  --color-heading: #373742;
+  --color-heading-alt: #4D6D93;
+  --bg-panel: #F6F6F6;
+  --bg-panel3: #E4E8EC;
+  --bg-panel-alt: #F8FCFF;
+  --color-text-dark: #373742; }
+
+html[data-theme='dark'] {
+  --bg: #333333;
+  --bg-panel: #434343;
+  --bg-panel-alt: #434343;
+  --bg-panel3: #434343;
+  --color-heading: #3694FF;
+  --color-heading-alt: #3694FF;
+  --color-text: #B5B5B5;
+  --color-text-dark: #B5B5B5; }
+
+html.transition,
+html.transition *,
+html.transition *:before,
+html.transition *:after {
+  transition: all 750ms !important;
+  transition-delay: 0 !important; }
 
 body {
   font-family: "Montserrat", sans-serif;
-  font-size: 1.5rem; }
+  font-size: 1.5rem;
+  background-color: var(--bg); }
 
 h1,
 h2,
@@ -72,7 +97,7 @@ li {
   line-height: 1.7;
   margin-top: 1rem; }
   .text--alt {
-    color: var(--color-dark); }
+    color: var(--color-text-dark); }
   @media (max-width: 1600px) {
     .text {
       font-size: 1.8rem; } }
@@ -84,7 +109,8 @@ li {
   font-size: 5rem;
   padding: 2rem 0;
   text-align: center;
-  border-bottom: 1px solid var(--color-light-gray); }
+  border-bottom: 1px solid var(--color-light-gray);
+  color: var(--color-heading); }
   @media (max-width: 1600px) {
     .heading-lg {
       font-size: 4rem; } }
@@ -104,7 +130,7 @@ li {
   text-align: center;
   text-transform: uppercase;
   font-weight: 800;
-  color: var(--color-dark-alt);
+  color: var(--color-heading-alt);
   position: relative;
   display: block; }
   @media (max-width: 1600px) {
@@ -181,6 +207,80 @@ li {
       font-size: 1.8rem; } }
   .input:focus {
     outline: none; }
+
+/* Switch button
+ ===================*/
+label {
+  display: flex;
+  align-items: center; }
+
+.switch {
+  opacity: 0;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  z-index: -1; }
+
+.switch:checked ~ .switch-checkbox {
+  background: #fcde5a; }
+
+.switch:checked ~ .switch-checkbox:after {
+  left: 50%;
+  background: whitesmoke; }
+
+.switch:checked ~ .switch-checkbox:active::after {
+  left: 27%;
+  background: whitesmoke; }
+
+.switch:not(:checked) ~ .switch-checkbox:active {
+  background: #a3a3a3; }
+
+.switch:not(:checked) ~ .switch-checkbox:active::after {
+  background: #f8f8f8; }
+
+.switch-checkbox {
+  display: flex;
+  align-items: center;
+  width: 60px;
+  height: 30px;
+  position: relative;
+  cursor: pointer;
+  background: var(--color-dark-blue);
+  border-radius: 2em;
+  border: solid 3px rgba(255, 0, 0, 0);
+  transition: all 0.2s ease; }
+
+.switch-checkbox:after,
+.switch-checkbox:before {
+  position: relative;
+  display: flex;
+  content: "";
+  width: 50%;
+  height: 100%; }
+
+.switch-checkbox:after {
+  left: 0;
+  border-radius: 50%;
+  background: #f0f5f9;
+  transition: all 0.3s;
+  box-shadow: 2px 2px 5px rgba(110, 110, 110, 0.164); }
+
+span:active::after {
+  width: 72%;
+  border-radius: 2em; }
+
+.switch-checkbox:before {
+  display: none; }
+
+.circle-icon {
+  position: absolute;
+  top: 2px;
+  right: 5%; }
+
+.circle-icon2 {
+  position: absolute;
+  top: 2px;
+  left: 8%; }
 
 /* Header
 ===================*/
@@ -275,7 +375,8 @@ li {
 .stories-header__h1 {
   font-family: "Montserrat", sans-serif;
   font-weight: 800;
-  font-size: 5rem; }
+  font-size: 5rem;
+  color: var(--color-heading); }
   @media (max-width: 1600px) {
     .stories-header__h1 {
       font-size: 4rem; } }
@@ -486,7 +587,7 @@ li {
 .subscribe {
   max-width: 1400px;
   border-radius: 6rem;
-  background-color: var(--color-light);
+  background-color: var(--bg-panel);
   padding: 4rem;
   margin: 8rem 0; }
   @media (max-width: 1370px) {
@@ -500,7 +601,7 @@ li {
     .subscribe {
       padding: 2rem 1rem; } }
   .subscribe__h3 {
-    color: var(--color-black);
+    color: var(--color-heading);
     text-align: center;
     font-size: 3rem;
     font-weight: 800;
@@ -509,7 +610,7 @@ li {
       .subscribe__h3 {
         font-size: 2.4rem; } }
   .subscribe__h5 {
-    color: var(--color-dark);
+    color: var(--color-heading-alt);
     font-size: 2.8rem;
     font-weight: 400;
     text-align: center;
@@ -545,13 +646,13 @@ li {
       padding: 4rem 0; } }
 
 .review {
-  width: 100%;
-  background-color: var(--color-light);
+  background-color: var(--bg-panel);
   padding: 2rem 3rem;
   border-radius: 2rem;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   max-width: 800px;
+  width: 100%;
   margin: 0 auto; }
   .review__h3 {
     font-family: "Montserrat", sans-serif;
@@ -560,7 +661,8 @@ li {
     text-align: center;
     padding: 3rem 0;
     text-transform: uppercase;
-    border-bottom: 4px solid #B4CCE5; }
+    border-bottom: 4px solid #B4CCE5;
+    color: var(--color-heading); }
     @media (max-width: 1600px) {
       .review__h3 {
         font-size: 3.2rem; } }
@@ -571,7 +673,7 @@ li {
       .review__h3 {
         font-size: 2.4rem; } }
   .review__slider {
-    margin: 6rem 0; }
+    margin: 6rem auto; }
   .review__slide {
     display: -webkit-box;
     display: -webkit-flex;
@@ -606,7 +708,8 @@ li {
     max-width: 600px;
     font-size: 2.8rem;
     line-height: 1.7;
-    margin: 2rem 0 6rem; }
+    margin: 2rem 0 6rem;
+    color: var(--color-text-dark); }
     @media (max-width: 1600px) {
       .review__text {
         font-size: 2rem; } }
@@ -635,7 +738,8 @@ li {
     -ms-flex-align: center;
     align-items: center; }
     .review__next span {
-      font-size: 2rem; }
+      font-size: 2rem;
+      color: var(--color-text-dark); }
       @media (max-width: 1600px) {
         .review__next span {
           font-size: 1.6rem; } }
@@ -644,14 +748,14 @@ li {
     margin-top: 0.5rem; }
 
 .newsletter {
-  background-color: var(--color-light-alt);
+  background-color: var(--bg-panel-alt);
   padding: 3rem;
   margin: 3rem auto;
   max-width: 800px; }
   .newsletter__h3 {
     font-size: 5rem;
     font-weight: 900;
-    color: var(--color-dark-alt);
+    color: var(--color-heading-alt);
     text-transform: uppercase; }
     @media (max-width: 1600px) {
       .newsletter__h3 {
@@ -688,7 +792,7 @@ li {
   .popular__h3 {
     font-size: 5rem;
     font-weight: 900;
-    color: var(--color-dark-alt);
+    color: var(--color-heading-alt);
     text-transform: uppercase;
     margin-bottom: 4rem;
     display: block; }
@@ -769,7 +873,7 @@ li {
     flex-wrap: wrap; }
   .subscribe-input__title {
     font-size: 2.4rem;
-    color: var(--color-dark-alt);
+    color: var(--color-heading);
     font-weight: 600; }
     @media (max-width: 1100px) {
       .subscribe-input__title {
@@ -794,7 +898,8 @@ li {
     max-width: 460px;
     width: 100%; }
     .subscribe-input__input input {
-      border: 0; }
+      border: 0;
+      height: 100%; }
   .subscribe-input__btn {
     border-left: 2px solid var(--color-gray); }
     @media (max-width: 740px) {
@@ -840,14 +945,16 @@ li {
 
 .post-list {
   margin: 3rem 0;
-  background-color: var(--color-light-alt);
+  background-color: var(--bg-panel-alt);
   padding: 4rem 3rem; }
   @media (max-width: 550px) {
     .post-list {
       padding: 4rem 1rem; } }
   .post-list__item {
     font-size: 2.2rem;
-    margin-top: 3rem; }
+    margin-top: 3rem;
+    line-height: 1.5;
+    color: var(--color-text-dark); }
     @media (max-width: 1600px) {
       .post-list__item {
         font-size: 1.8rem; } }
@@ -875,7 +982,8 @@ li {
     font-weight: 700;
     font-size: 2.4rem;
     margin: 3rem 0;
-    text-align: center; }
+    text-align: center;
+    color: var(--color-heading); }
   .share__content {
     display: -webkit-box;
     display: -webkit-flex;
@@ -913,9 +1021,12 @@ li {
 
 .author {
   max-width: 1200px;
-  background-color: var(--color-light-gray);
+  background-color: var(--bg-panel3);
   padding: 3rem 2rem;
   margin: 5rem auto 8rem; }
+  @media (max-width: 420px) {
+    .author {
+      padding: 3rem 1rem; } }
   .author__header {
     display: -webkit-box;
     display: -webkit-flex;
@@ -929,7 +1040,8 @@ li {
     margin-left: 2rem;
     font-weight: 600;
     font-size: 2.4rem;
-    line-height: 1.7; }
+    line-height: 1.7;
+    color: var(--color-text-dark); }
   .author__info {
     margin: 2rem 0;
     font-weight: 600; }
