--- a/scss/style.scss
+++ b/scss/style.scss
@@ -72,6 +72,7 @@
         font-family: $text;
         font-weight: 800;
         font-size: 5rem;
+        color: var(--color-heading);
 
         @media(max-width: $laptop-xl) {
             font-size: 4rem;
@@ -301,7 +302,7 @@
 .subscribe {
     max-width: 1400px;
     border-radius: 6rem;
-    background-color: var(--color-light);
+    background-color: var(--bg-panel);
     padding: 4rem;
     margin: 8rem 0;
 
@@ -319,7 +320,7 @@
     }
 
     &__h3 {
-        color: var(--color-black);
+        color: var(--color-heading);
         text-align: center;
         font-size: 3rem;
         font-weight: 800;
@@ -331,7 +332,7 @@
     }
 
     &__h5 {
-        color: var(--color-dark);
+        color: var(--color-heading-alt);
         font-size: 2.8rem;
         font-weight: 400;
         text-align: center;
@@ -374,13 +375,15 @@
 }
 
 .review {
-    width: 100%;
-    background-color: var(--color-light);
+
+    background-color: var(--bg-panel);
     padding: 2rem 3rem;
     border-radius: 2rem;
     box-sizing: border-box;
     max-width: 800px;
+    width: 100%;
     margin: 0 auto;
+
 
     &__h3 {
         font-family: $text;
@@ -390,6 +393,7 @@
         padding: 3rem 0;
         text-transform: uppercase;
         border-bottom: 4px solid #B4CCE5;
+        color: var(--color-heading);
 
         @media(max-width: $laptop-xl) {
             font-size: 3.2rem;
@@ -406,7 +410,7 @@
 
 
     &__slider {
-        margin: 6rem 0;
+        margin: 6rem auto;
     }
 
     &__slide {
@@ -441,6 +445,7 @@
         font-size: 2.8rem;
         line-height: 1.7;
         margin: 2rem 0 6rem;
+        color: var(--color-text-dark);
 
         @media(max-width: $laptop-xl) {
             font-size: 2rem;
@@ -467,6 +472,8 @@
 
         span {
             font-size: 2rem;
+            color: var(--color-text-dark);
+
 
             @media(max-width: $laptop-xl) {
                 font-size: 1.6rem;
@@ -483,7 +490,7 @@
 
 
 .newsletter {
-    background-color: var(--color-light-alt);
+    background-color: var(--bg-panel-alt);
     padding: 3rem;
     margin: 3rem auto;
     max-width: 800px;
@@ -491,7 +498,7 @@
     &__h3 {
         font-size: 5rem;
         font-weight: 900;
-        color: var(--color-dark-alt);
+        color: var(--color-heading-alt);
         text-transform: uppercase;
 
         @media(max-width: $laptop-xl) {
@@ -543,7 +550,7 @@
     &__h3 {
         font-size: 5rem;
         font-weight: 900;
-        color: var(--color-dark-alt);
+        color: var(--color-heading-alt);
         text-transform: uppercase;
         margin-bottom: 4rem;
         display: block;
@@ -604,6 +611,8 @@
     border-radius: .5rem;
     display: none;
 
+
+
     &.active {
         display: block;
     }
@@ -618,7 +627,7 @@
 
     &__title {
         font-size: 2.4rem;
-        color: var(--color-dark-alt);
+        color: var(--color-heading);
         font-weight: 600;
 
         @media(max-width: $laptop-sm) {
@@ -645,6 +654,7 @@
 
         input {
             border: 0;
+            height: 100%;
         }
     }
 
@@ -712,7 +722,7 @@
 
 .post-list {
     margin: 3rem 0;
-    background-color: var(--color-light-alt);
+    background-color: var(--bg-panel-alt);
     padding: 4rem 3rem;
 
     @media(max-width: $mobile) {
@@ -722,6 +732,8 @@
     &__item {
         font-size: 2.2rem;
         margin-top: 3rem;
+        line-height: 1.5;
+        color: var(--color-text-dark);
 
         @media(max-width: $laptop-xl) {
             font-size: 1.8rem;
@@ -761,6 +773,7 @@
         font-size: 2.4rem;
         margin: 3rem 0;
         text-align: center;
+        color: var(--color-heading);
     }
 
 
@@ -794,24 +807,25 @@
 
 .author {
     max-width: 1200px;
-    background-color: var(--color-light-gray);
+    background-color: var(--bg-panel3);
     padding: 3rem 2rem;
     margin: 5rem auto 8rem;
+
+    @media(max-width: $mobile-sm) {
+        padding: 3rem 1rem;
+    }
 
     &__header {
         display: flex;
         align-items: center;
     }
 
-
-    &__photo {}
-
-
     &__name {
         margin-left: 2rem;
         font-weight: 600;
         font-size: 2.4rem;
         line-height: 1.7;
+        color: var(--color-text-dark);
     }
 
 
