--- a/css/style.css
+++ b/css/style.css
@@ -100,10 +100,10 @@ li {
     color: var(--color-text-dark); }
   @media (max-width: 1600px) {
     .text {
-      font-size: 1.8rem; } }
-  @media (max-width: 1370px) {
-    .text {
       font-size: 1.6rem; } }
+  @media (max-width: 1470px) {
+    .text {
+      font-size: 1.4rem; } }
 
 .heading-lg {
   font-size: 5rem;
@@ -113,10 +113,10 @@ li {
   color: var(--color-heading); }
   @media (max-width: 1600px) {
     .heading-lg {
-      font-size: 4rem; } }
+      font-size: 3rem; } }
   @media (max-width: 1470px) {
     .heading-lg {
-      font-size: 3.2rem; } }
+      font-size: 2.6rem; } }
   @media (max-width: 740px) {
     .heading-lg {
       font-size: 2.8rem; } }
@@ -135,10 +135,10 @@ li {
   display: block; }
   @media (max-width: 1600px) {
     .heading-underlined {
-      font-size: 4rem; } }
+      font-size: 3rem; } }
   @media (max-width: 1470px) {
     .heading-underlined {
-      font-size: 3.2rem; } }
+      font-size: 2.6rem; } }
   @media (max-width: 740px) {
     .heading-underlined {
       font-size: 2.8rem; } }
@@ -153,9 +153,9 @@ li {
     display: block;
     background-color: rgba(45, 128, 32, 0.4);
     margin: 1rem auto; }
-    @media (max-width: 1470px) {
+    @media (max-width: 1600px) {
       .heading-underlined::after {
-        height: 12px; } }
+        height: 10px; } }
 
 .center {
   display: flex;
@@ -170,9 +170,10 @@ li {
   font-weight: 700;
   color: var(--color-white);
   border-radius: .3em; }
-  @media (max-width: 1370px) {
+  @media (max-width: 1600px) {
     .btn {
-      font-size: 1.8rem; } }
+      font-size: 1.4rem;
+      padding: .7rem 2rem; } }
   @media (max-width: 380px) {
     .btn {
       font-size: 1.5rem; } }
@@ -204,7 +205,13 @@ li {
   width: 100%; }
   @media (max-width: 1470px) {
     .input {
-      font-size: 1.8rem; } }
+      font-size: 1.6rem; } }
+  @media (max-width: 1470px) {
+    .input {
+      font-size: 1.4rem; } }
+  @media (max-width: 900px) {
+    .input {
+      font-size: 1.3rem; } }
   .input:focus {
     outline: none; }
 
@@ -379,7 +386,7 @@ span:active::after {
   color: var(--color-heading); }
   @media (max-width: 1600px) {
     .stories-header__h1 {
-      font-size: 4rem; } }
+      font-size: 3.2rem; } }
   @media (max-width: 900px) {
     .stories-header__h1 {
       font-size: 3rem; } }
@@ -414,6 +421,9 @@ span:active::after {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   border: 4px solid #B4CCE5; }
+  @media (max-width: 1600px) {
+    .menu {
+      padding: .7rem 1rem; } }
   @media (max-width: 740px) {
     .menu {
       -webkit-box-pack: center;
@@ -461,19 +471,16 @@ span:active::after {
       display: none; } }
   .menu__name {
     color: #fff;
-    font-size: 2.5rem;
+    font-size: 2.2rem;
     text-transform: capitalize;
     margin: 0 1rem;
     font-weight: 700; }
     @media (max-width: 1600px) {
       .menu__name {
-        font-size: 1.8rem; } }
-    @media (max-width: 900px) {
-      .menu__name {
-        font-size: 1.8rem; } }
-    @media (max-width: 550px) {
-      .menu__name {
         font-size: 1.6rem; } }
+    @media (max-width: 1470px) {
+      .menu__name {
+        font-size: 1.4rem; } }
   .menu__btn {
     -webkit-flex-basis: 10%;
     -ms-flex-preferred-size: 10%;
@@ -533,9 +540,9 @@ span:active::after {
     font-weight: 600;
     color: var(--color-white);
     text-transform: uppercase; }
-    @media (max-width: 1470px) {
+    @media (max-width: 1600px) {
       .card__fullname {
-        font-size: 1.6rem; } }
+        font-size: 1.4rem; } }
   .card__h3 {
     color: var(--color-white);
     font-size: 3rem;
@@ -543,11 +550,8 @@ span:active::after {
     margin: 5rem 0; }
     @media (max-width: 1600px) {
       .card__h3 {
-        font-size: 2.4rem; } }
-    @media (max-width: 1470px) {
-      .card__h3 {
         font-size: 2rem; } }
-    @media (max-width: 380px) {
+    @media (max-width: 1470px) {
       .card__h3 {
         font-size: 1.8rem; } }
   .card__location {
@@ -557,7 +561,7 @@ span:active::after {
     font-size: 1.6rem;
     font-style: normal;
     font-weight: 600; }
-    @media (max-width: 1470px) {
+    @media (max-width: 1600px) {
       .card__location {
         font-size: 1.4rem; } }
   .card__currency {
@@ -568,7 +572,7 @@ span:active::after {
     font-size: 1.8rem; }
     @media (max-width: 1470px) {
       .card__currency {
-        font-size: 1.6rem; } }
+        font-size: 1.3rem; } }
     @media (max-width: 380px) {
       .card__currency {
         display: none; } }
@@ -606,6 +610,12 @@ span:active::after {
     font-size: 3rem;
     font-weight: 800;
     text-transform: uppercase; }
+    @media (max-width: 1600px) {
+      .subscribe__h3 {
+        font-size: 3rem; } }
+    @media (max-width: 1470px) {
+      .subscribe__h3 {
+        font-size: 2.6rem; } }
     @media (max-width: 900px) {
       .subscribe__h3 {
         font-size: 2.4rem; } }
@@ -617,7 +627,7 @@ span:active::after {
     margin: 2rem 0; }
     @media (max-width: 1600px) {
       .subscribe__h5 {
-        font-size: 2.2rem; } }
+        font-size: 2rem; } }
     @media (max-width: 900px) {
       .subscribe__h5 {
         font-size: 1.8rem; } }
@@ -665,13 +675,13 @@ span:active::after {
     color: var(--color-heading); }
     @media (max-width: 1600px) {
       .review__h3 {
-        font-size: 3.2rem; } }
+        font-size: 3rem; } }
     @media (max-width: 1470px) {
       .review__h3 {
-        font-size: 2.8rem; } }
-    @media (max-width: 900px) {
+        font-size: 2.6rem; } }
+    @media (max-width: 1370px) {
       .review__h3 {
-        font-size: 2.4rem; } }
+        font-size: 2.2rem; } }
   .review__slider {
     margin: 6rem auto; }
   .review__slide {
@@ -712,13 +722,7 @@ span:active::after {
     color: var(--color-text-dark); }
     @media (max-width: 1600px) {
       .review__text {
-        font-size: 2rem; } }
-    @media (max-width: 1470px) {
-      .review__text {
-        font-size: 1.8rem; } }
-    @media (max-width: 380px) {
-      .review__text {
-        font-size: 1.6rem; } }
+        font-size: 1.4rem; } }
   .review__footer {
     display: -webkit-box;
     display: -webkit-flex;
@@ -759,13 +763,13 @@ span:active::after {
     text-transform: uppercase; }
     @media (max-width: 1600px) {
       .newsletter__h3 {
-        font-size: 3.2rem; } }
+        font-size: 3rem; } }
     @media (max-width: 1470px) {
       .newsletter__h3 {
-        font-size: 2.8rem; } }
-    @media (max-width: 900px) {
+        font-size: 2.6rem; } }
+    @media (max-width: 1370px) {
       .newsletter__h3 {
-        font-size: 2.4rem; } }
+        font-size: 2.2rem; } }
   .newsletter__text {
     margin: 2rem 0; }
 
@@ -778,6 +782,12 @@ span:active::after {
     font-size: 2rem;
     line-height: 1.7;
     color: var(--color-gray); }
+    @media (max-width: 1600px) {
+      .newsletter-form__h5 {
+        font-size: 1.8rem; } }
+    @media (max-width: 1470px) {
+      .newsletter-form__h5 {
+        font-size: 1.6rem; } }
   .newsletter-form__input {
     max-width: 530px;
     margin: 2rem 0; }
@@ -798,13 +808,13 @@ span:active::after {
     display: block; }
     @media (max-width: 1600px) {
       .popular__h3 {
-        font-size: 3.2rem; } }
+        font-size: 3rem; } }
     @media (max-width: 1470px) {
       .popular__h3 {
-        font-size: 2.8rem; } }
-    @media (max-width: 900px) {
+        font-size: 2.6rem; } }
+    @media (max-width: 1370px) {
       .popular__h3 {
-        font-size: 2.4rem; } }
+        font-size: 2.2rem; } }
   .popular__content {
     display: -webkit-box;
     display: -webkit-flex;
@@ -853,6 +863,9 @@ span:active::after {
   border: 1px solid var(--color-light-gray);
   border-radius: .5rem;
   display: none; }
+  @media (max-width: 1470px) {
+    .subscribe-input {
+      padding: 1rem; } }
   .subscribe-input.active {
     display: block; }
   .subscribe-input__content {
@@ -875,7 +888,10 @@ span:active::after {
     font-size: 2.4rem;
     color: var(--color-heading);
     font-weight: 600; }
-    @media (max-width: 1100px) {
+    @media (max-width: 1600px) {
+      .subscribe-input__title {
+        font-size: 2rem; } }
+    @media (max-width: 1470px) {
       .subscribe-input__title {
         font-size: 1.8rem; } }
   .subscribe-input__group {
@@ -936,9 +952,12 @@ span:active::after {
     @media (max-width: 1600px) {
       .post__h3 {
         font-size: 3.2rem; } }
-    @media (max-width: 740px) {
+    @media (max-width: 1470px) {
       .post__h3 {
         font-size: 2.8rem; } }
+    @media (max-width: 740px) {
+      .post__h3 {
+        font-size: 2.6rem; } }
     @media (max-width: 550px) {
       .post__h3 {
         font-size: 2.4rem; } }
@@ -951,16 +970,19 @@ span:active::after {
     .post-list {
       padding: 4rem 1rem; } }
   .post-list__item {
-    font-size: 2.2rem;
+    font-size: 2rem;
     margin-top: 3rem;
     line-height: 1.5;
     color: var(--color-text-dark); }
     @media (max-width: 1600px) {
       .post-list__item {
-        font-size: 1.8rem; } }
+        font-size: 1.6rem; } }
+    @media (max-width: 1470px) {
+      .post-list__item {
+        font-size: 1.4rem; } }
     @media (max-width: 550px) {
       .post-list__item {
-        font-size: 1.6rem; } }
+        margin-top: 2rem; } }
     .post-list__item::before {
       content: '';
       display: inline-block;
