--- a/css/style.css
+++ b/css/style.css
@@ -323,7 +323,7 @@ span:active::after {
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap; }
-  @media (max-width: 1240px) {
+  @media (max-width: 1100px) {
     .main__content {
       -webkit-box-pack: center;
       -webkit-justify-content: center;
@@ -331,20 +331,15 @@ span:active::after {
       justify-content: center; } }
 
 .stories {
-  -webkit-flex-basis: 60%;
-  -ms-flex-preferred-size: 60%;
-  flex-basis: 60%;
+  -webkit-flex-basis: 70%;
+  -ms-flex-preferred-size: 70%;
+  flex-basis: 70%;
   padding: 7rem 0; }
-  @media (max-width: 1470px) {
+  @media (max-width: 1250px) {
     .stories {
-      -webkit-flex-basis: 66%;
-      -ms-flex-preferred-size: 66%;
-      flex-basis: 66%; } }
-  @media (max-width: 1240px) {
-    .stories {
-      -webkit-flex-basis: 95%;
-      -ms-flex-preferred-size: 95%;
-      flex-basis: 95%; } }
+      -webkit-flex-basis: 65%;
+      -ms-flex-preferred-size: 65%;
+      flex-basis: 65%; } }
   @media (max-width: 1100px) {
     .stories {
       -webkit-flex-basis: 100%;
@@ -377,7 +372,8 @@ span:active::after {
         .stories__content .card {
           -webkit-flex-basis: 100%;
           -ms-flex-preferred-size: 100%;
-          flex-basis: 100%; } }
+          flex-basis: 100%;
+          max-width: 700px; } }
 
 .stories-header__h1 {
   font-family: "Montserrat", sans-serif;
@@ -594,9 +590,9 @@ span:active::after {
   background-color: var(--bg-panel);
   padding: 4rem;
   margin: 8rem 0; }
-  @media (max-width: 1370px) {
+  @media (max-width: 1100px) {
     .subscribe {
-      max-width: 800px;
+      max-width: 700px;
       margin: 4rem auto; } }
   @media (max-width: 900px) {
     .subscribe {
@@ -637,20 +633,21 @@ span:active::after {
     margin: 8rem auto 3rem; }
 
 .sidebar {
-  -webkit-flex-basis: 37%;
-  -ms-flex-preferred-size: 37%;
-  flex-basis: 37%;
+  -webkit-flex-basis: 28%;
+  -ms-flex-preferred-size: 28%;
+  flex-basis: 28%;
   padding: 8rem 0; }
-  @media (max-width: 1470px) {
+  @media (max-width: 1250px) {
     .sidebar {
-      -webkit-flex-basis: 32%;
-      -ms-flex-preferred-size: 32%;
-      flex-basis: 32%; } }
-  @media (max-width: 1240px) {
+      -webkit-flex-basis: 34%;
+      -ms-flex-preferred-size: 34%;
+      flex-basis: 34%; } }
+  @media (max-width: 1100px) {
     .sidebar {
       -webkit-flex-basis: 100%;
       -ms-flex-preferred-size: 100%;
-      flex-basis: 100%; } }
+      flex-basis: 100%;
+      padding: 0 0 4rem 0; } }
   @media (max-width: 900px) {
     .sidebar {
       padding: 4rem 0; } }
@@ -661,9 +658,9 @@ span:active::after {
   border-radius: 2rem;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  max-width: 800px;
+  max-width: 700px;
   width: 100%;
-  margin: 0 auto; }
+  margin: 2rem auto; }
   .review__h3 {
     font-family: "Montserrat", sans-serif;
     font-weight: 800;
@@ -699,8 +696,8 @@ span:active::after {
     -ms-flex-align: center;
     align-items: center; }
   .review__photo {
-    max-width: 250px;
-    max-height: 250px;
+    max-width: 180px;
+    max-height: 180px;
     border-radius: 50%;
     overflow: hidden;
     border: 1px solid var(--color-white);
@@ -755,7 +752,7 @@ span:active::after {
   background-color: var(--bg-panel-alt);
   padding: 3rem;
   margin: 3rem auto;
-  max-width: 800px; }
+  max-width: 600px; }
   .newsletter__h3 {
     font-size: 5rem;
     font-weight: 900;
@@ -796,7 +793,7 @@ span:active::after {
   width: 100%;
   margin: 3rem 0;
   padding: 3rem; }
-  @media (max-width: 1370px) {
+  @media (max-width: 1470px) {
     .popular {
       padding: 1rem; } }
   .popular__h3 {
@@ -815,6 +812,10 @@ span:active::after {
     @media (max-width: 1370px) {
       .popular__h3 {
         font-size: 2.2rem; } }
+    @media (max-width: 900px) {
+      .popular__h3 {
+        max-width: 700px;
+        margin: 0 auto 2rem; } }
   .popular__content {
     display: -webkit-box;
     display: -webkit-flex;
@@ -845,16 +846,20 @@ span:active::after {
         @media (max-width: 1370px) {
           .popular__content .card:first-child {
             margin-top: 2rem; } }
-      @media (max-width: 1240px) {
+      @media (max-width: 1100px) {
         .popular__content .card {
           -webkit-flex-basis: 49%;
           -ms-flex-preferred-size: 49%;
           flex-basis: 49%; } }
+      @media (max-width: 1300px) {
+        .popular__content .card {
+          padding: 1rem; } }
       @media (max-width: 900px) {
         .popular__content .card {
           -webkit-flex-basis: 100%;
           -ms-flex-preferred-size: 100%;
-          flex-basis: 100%; } }
+          flex-basis: 100%;
+          max-width: 700px; } }
 
 .subscribe-input {
   max-width: 1000px;
