--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -51,7 +51,8 @@ html.transition *:after {
 }
 
 body {
-    font-family: $text;
+    font-family: $heading;
+    font-weight: 400;
     font-size: 1.5rem;
     background-color: var(--bg);
 }
@@ -348,4 +349,39 @@ span:active::after {
     top: 2px;
     left: 8%;
 
+}
+
+.toTop {
+    display: inline-block;
+    position: fixed;
+    bottom: 8rem;
+    right: 4rem;
+    transition: opacity .5s linear;
+    opacity: 0;
+    z-index: -1;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @media(max-width: $mobile) {
+        bottom: 4rem;
+        right: 2rem;
+    }
+
+    img {
+        @media(max-width: $mobile) {
+            width: 60px;
+        }
+
+    }
+}
+
+.toTop:hover {
+    cursor: pointer;
+}
+
+#toTop.show {
+    opacity: 1;
+    z-index: 2000;
 }
