--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,7 @@
     box-shadow: $shadow-alt;
     padding: 1rem 0;
 
+
     &__content {
         display: flex;
         align-items: center;
@@ -16,7 +17,9 @@
 
 /* Main
 ===================*/
+
 .main {
+
     &__content {
         display: flex;
         justify-content: space-between;
@@ -30,7 +33,7 @@
 
 
 .stories {
-    flex-basis: 70%;
+    flex-basis: 65%;
     padding: 7rem 0;
 
     @media(max-width: 1250px) {
@@ -46,6 +49,10 @@
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
+
+        @media(max-width: $laptop-xl) {
+            padding: 3rem 0;
+        }
 
         @media(max-width: $tablet) {
             justify-content: center;
@@ -89,11 +96,15 @@
         max-width: 1000px;
         width: 100%;
         margin: 4rem 0;
+
+        @media(max-width: $laptop-xl) {
+            margin: 2rem 0;
+        }
     }
 }
 
 .menu {
-    max-width: 1400px;
+    max-width: 1500px;
     padding: 1rem 2rem;
     background-color: var(--color-dark-alt);
     display: flex;
@@ -234,6 +245,7 @@
         font-size: 3rem;
         text-transform: uppercase;
         margin: 5rem 0;
+        max-width: 440px;
 
         @media(max-width: $laptop-xl) {
             font-size: 2rem;
@@ -293,7 +305,7 @@
 
 .subscribe {
     max-width: 1400px;
-    border-radius: 6rem;
+    border-radius: 1.6rem;
     background-color: var(--bg-panel);
     padding: 4rem;
     margin: 8rem 0;
@@ -351,13 +363,13 @@
     &__input {
         max-width: 900px;
         width: 100%;
-        margin: 8rem auto 3rem;
+        margin: 5rem auto 3rem;
     }
 }
 
 
 .sidebar {
-    flex-basis: 28%;
+    flex-basis: 31%;
     padding: 8rem 0;
 
 
@@ -487,7 +499,7 @@
     background-color: var(--bg-panel-alt);
     padding: 3rem;
     margin: 3rem auto;
-    max-width: 600px;
+    max-width: 700px;
 
     &__h3 {
         font-size: 5rem;
@@ -833,7 +845,7 @@
 }
 
 .author {
-    max-width: 1200px;
+    max-width: 1500px;
     background-color: var(--bg-panel3);
     padding: 3rem 2rem;
     margin: 5rem auto 8rem;
@@ -900,6 +912,7 @@
 
             @media(max-width: 840px) {
                 flex-basis: 100%;
+                max-width: 700px;
             }
         }
     }
